--- a/packages/bpk-stylesheets/package.json
+++ b/packages/bpk-stylesheets/package.json
@@ -14,6 +14,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "bpk-mixins": "^15.7.0",
+    "bpk-tokens": "^23.3.0",
     "normalize.css": "4.2.0"
   }
 }
